--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
   </div>
   <div class="footer-container">
     <div class="credits">
-      <p>© 2021 Mushi Eats</p>
+      <p>© 2021 Maru Eats</p>
     </div>
     <div class="logos">
       <span class="material-symbols-outlined">
